[package]
name = "rust_ping"
version = "0.1.0"
edition = "2021"
authors = ["Your Name"]
description = "A Rust CLI ping tool with graphs and export options"

[dependencies]
clap = { version = "4.4", features = ["derive"] }
colored = "2.1"
pnet = "0.34"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4", features = ["serde"] }
